Fixed toolbar spacing for listing pages

--- a/openidm-ui/openidm-ui-admin/src/main/resources/css/config/adminStyle.less
+++ b/openidm-ui/openidm-ui-admin/src/main/resources/css/config/adminStyle.less
@@ -218,7 +218,7 @@ table.placeholder {
   }
 
   .form-group {
-    margin-right:20px;
+    margin-right:15px;
   }
 
   .toolbar-search {
@@ -268,6 +268,10 @@ table.placeholder {
   margin-bottom:20px;
   border-bottom: 1px solid #ddd;
   border-top: 1px solid #ddd;
+
+  .btn-group.left-group {
+    margin-left:15px;
+  }
 
   &.no-top-border {
     border-top:0px;
